@@ -850,6 +850,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-9519. Some coding improvement in SecondaryNameNode#main.
     (Xiao Chen via Yongjun Zhang)
 
+    HDFS-9514. TestDistributedFileSystem.testDFSClientPeerWriteTimeout failing;
+    exception being swallowed. (Wei-Chiu Chuang via Yongjun Zhang)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
